# elba

./: .envrc  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  appveyor.yml  design.md  elba.ipkg  faq.html  index.html  intro.html  print.html  searchindex.js  searchindex.json  shell.nix  test
ci/: before_deploy.ps1  before_deploy.sh
doc/: index.md
docs/: Makefile  README.md  book.toml  make.bat
docs/src/: SUMMARY.md  conf.py  index.rst  intro.md
docs/src/getting_started/: README.md  installation.md  quick_start.md
docs/src/reference/: README.md  backends.rst  cache.md  cache.rst  configuration.rst  dependencies.md  dependencies.rst  dependency_resolution.md  identifying_packages.md  indices.md  indices.rst  manifest.rst  registries.rst  resolutions.md  resolutions.rst  specifying_dependencies.md
docs/src/usage/: README.md  binaries_and_tests.rst  configuration.md  configuration.rst  custom_subcommands.md  custom_subcommands.rst  getting_started.rst  installing.md  installing.rst  installing_idris.rst  manifest.md  manifest.rst  publishing.md  publishing.rst  quick_start.rst  testing.md
docs/src/util/: toml.py
getting_started/: index.html  installation.html  quick_start.html
reference/: cache.html  dependencies.html  index.html  indices.html  resolutions.html
src/: idris.rs  main.rs  manifest.rs  spec.rs
src/Elba/: Main.idr
src/Elba/System/: Git.idr
src/file/: manifest.rs  mod.rs
src/lib/: compiler.rs  config.rs  err.rs  lib.rs  spec.rs
src/lib/cli/: backend.rs  build.rs  index.rs  mod.rs  new.rs  registry.rs  repo.rs
src/lib/file/: lockfile.rs  manifest.rs  mod.rs
src/lib/index/: config.rs  mod.rs
src/lib/package/: ipkg.rs  lockfile.rs  manifest.rs  mod.rs  resolution.rs  types.rs  version.rs
src/lib/registry/: index.rs  mod.rs
src/lib/remote/: backend.rs  index.rs  mod.rs  registry.rs  repo.rs  resolution.rs
src/lib/resolve/: assignment.rs  context.rs  incompat.rs  mod.rs  resolve.rs  retriever.rs  solve.rs  types.rs
src/lib/retrieve/: cache.rs  mod.rs
src/lib/util/: config.rs  err.rs  error.rs  errors.rs  git.rs  graph.rs  lock.rs  mod.rs  parser.rs  process_builder.rs  read2.rs  shell.rs
tests/: build.rs  index.rs  index_test.rs  resolver.rs
tests/data/index/: index.toml
tests/data/index/avoid-conflict/: foo
tests/data/index/avoid_conflict/: bar  foo  root
tests/data/index/conflict-complex/: root  y
tests/data/index/conflict-res-partial/: foo  shared
tests/data/index/conflict-simple/: bar
tests/data/index/conflict_complex/: a  b  foo  root  x  y
tests/data/index/conflict_res_partial/: foo  left  right  root  shared  target
tests/data/index/conflict_res_simple/: bar  foo  root
tests/data/index/conflict_simple/: bar  baz  foo  root
tests/data/index/no-conflict/: bar  foo  root
tests/data/index/no_conflict/: bar  foo  root
tests/data/pkgs/one/: elba.toml
tests/data/pkgs/one/src/: Main.ibc  Main.idr
tests/index/: index.toml
tests/index/a/: a
tests/index/avoid_conflict/: foo  root
tests/index/conflict_complex/: a  b  foo  root  x  y
tests/index/conflict_res_partial/: foo  left  right  root  shared
tests/index/conflict_res_simple/: bar  foo  root
tests/index/conflict_simple/: bar  foo  root
tests/index/no_conflict/: bar  foo  root
tests/index/root/: simple  simple_constrained
tests/testsuite/: index.rs  main.rs  resolver.rs  util.rs
usage/: configuration.html  custom_subcommands.html  index.html  installing.html  manifest.html  publishing.html
