[package]
name = "elba"
description = "elba is a package manager for Idris"
authors = ["David Cao <dcao@protonmail.com>"]
version = "0.1.5"
license = "MIT"

# crates.io stuff
homepage = "https://github.com/elba/elba"
documentation = "https://docs.rs/elba"
repository = "https://github.com/elba/elba"
readme = "README.md"

keywords = ["idris", "package-manager"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = "2"
config = "0.9"
console = "0.6"
crossbeam = "0.4"
digest = { version = "0.7", features = ["std"]}
directories = "1"
failure = "0.1"
flate2 = "1.0"
fs2 = "0.4"
git2 = "0.7"
indexmap = { version = "1", features = ["serde-1"] }
# The current version of indicatif doesn't let us print above the progress bar
# We'll add this dep back in once it does
# indicatif = "0.9"
Inflector = "0.11"
itertools = "0.7"
nom = "4.0"
petgraph = "0.4"
reqwest = "0.8"
scoped_threadpool = "0.1"
semver = { version = "0.9", features = ["serde"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.7"
shell-escape = "0.1"
slog = { version = "2", features = ["max_level_trace", "release_max_level_warn"] }
slog-async = "2"
slog-term = "2"
symlink = "0.1"
tar = "0.4"
textwrap = "0.10"
toml = "0.4"
url = "1.7"
url_serde = "0.2"
walkdir = "2"

[dev-dependencies]
lazy_static = "1"
tempdir = "0.3"

[lib]
name = "elba"
path = "src/lib/lib.rs"

[[bin]]
name = "elba"
path = "src/bin/main.rs"
