[package]
name = "elba"
description = "elba is a package manager for Idris"
authors = ["David Cao <david@cao.st>"]
version = "0.3.2"
license = "MIT"
edition = "2018"

# crates.io stuff
homepage = "https://github.com/elba/elba"
documentation = "https://docs.rs/elba"
repository = "https://github.com/elba/elba"
readme = "README.md"

keywords = ["idris", "package-manager"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = "2"
config = "0.10"
console = "0.6"
crossbeam = "0.4"
digest = { version = "0.7", features = ["std"]}
directories = "1"
failure = "0.1"
futures-preview = { version = "0.3.0-alpha.17", features = ["compat"] }
failure_derive = "0.1"
flate2 = "1.0"
fs2 = "0.4"
git2 = "0.7"
ignore = "0.4"
indexmap = { version = "1", features = ["serde-1"] }
Inflector = "0.11"
itertools = "0.7"
libc = "0.2"
nom = "4.0"
num_cpus = "1"
petgraph = "0.4"
rand = "0.7"
reqwest = { version = "0.10", features = ["blocking"] }
scoped_threadpool = "0.1"
semver = { version = "0.9", features = ["serde"] }
semver_constraints = { version = "0.1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.7"
shell-escape = "0.1"
simsearch = "0.1"
slog = { version = "2", features = ["max_level_trace", "release_max_level_warn"] }
slog-async = "2"
slog-term = "2"
symlink = "0.1"
tar = "0.4"
textwrap = "0.10"
tokio = "0.1.22"
tokio-process = "0.2"
toml = "0.4"
toml_edit = "0.1.5"
url = "1.7"
url_serde = "0.2"
walkdir = "2"

[target.'cfg(windows)'.dependencies]
miow = "0.3.1"
fwdansi = "1"
winapi = { version = "0.3", features = ["winerror"] }

[dev-dependencies]
lazy_static = "1"
tempdir = "0.3"

[lib]
name = "elba"
path = "src/lib/lib.rs"

[[bin]]
name = "elba"
path = "src/bin/main.rs"
