[package]
name = "elba"
description = "elba is a package manager for Idris"
authors = ["David Cao <david@cao.st>", "Andy Lok <andylokandy@hotmail.com>"]
version = "0.3.3"
license = "MIT"
edition = "2018"

# crates.io stuff
homepage = "https://github.com/elba/elba"
documentation = "https://docs.rs/elba"
repository = "https://github.com/elba/elba"
readme = "README.md"

keywords = ["idris", "package-manager"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = "2"
config = "0.10"
console = "0.6"
crossbeam = "0.4"
digest = { version = "0.7", features = ["std"]}
directories = "1"
failure = "0.1"
futures = "0.3"
flate2 = "1.0"
fs2 = "0.4"
git2 = { version = "0.12", features = ["vendored-openssl" ]}
hex = "0.4"
ignore = "0.4"
indexmap = { version = "1", features = ["serde-1"] }
Inflector = "0.11"
itertools = '0.8'
libc = "0.2"
nom = "5"
num_cpus = "1"
petgraph = "0.4"
rand = "0.7"
reqwest = { version = "0.10", features = ["blocking"] }
scoped_threadpool = "0.1"
semver = { version = "0.9", features = ["serde"] }
semver_constraints = { version = "0.1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.8"
shell-escape = "0.1"
simsearch = "0.2"
slog = { version = "2", features = ["max_level_trace", "release_max_level_warn"] }
slog-async = "2"
slog-term = "2"
symlink = "0.1"
tar = "0.4"
textwrap = "0.10"
tokio = { version = "0.2", features = ["process", "time"] }
toml = "0.5"
toml_edit = "0.1.5"
url = { version = "2", features = ["serde"] }
walkdir = "2"
remove_dir_all = "0.5"

[target.'cfg(windows)'.dependencies]
miow = "0.3.1"
fwdansi = "1"
winapi = { version = "0.3", features = ["winerror"] }

[dev-dependencies]
lazy_static = "1"
tempdir = "0.3"

[lib]
name = "elba"
path = "src/lib/lib.rs"

[[bin]]
name = "elba"
path = "src/bin/main.rs"
